--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'serial-viewer/**'
-      - '.github/workflows/deploy-serial-viewer.yml'
+      - '.github/workflows/deploy.yml'
 
 jobs:
   deploy:
