Ajout de la gestion des erreurs dans le workflow de déploiement en utilisant 'set -e', et mise à jour des commandes pour récupérer et réinitialiser le dépôt avant de reconstruire le conteneur serial-viewer.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,14 @@ jobs:
       - name: Rebuild & Restart serial-viewer container
         run: |
           ssh -p ${{ secrets.NAS_SSH_PORT }} ${{ secrets.NAS_USER }}@${{ secrets.NAS_HOST }} "
+            set -e
             cd /volume1/docker/serial-viewer &&
-            git pull origin main &&
+            git config --global --add safe.directory /volume1/docker/serial-viewer &&
+            git fetch origin &&
+            git reset --hard origin/main &&
+            git clean -fd &&
+            mkdir -p public &&
+            echo '$version' > public/version.txt &&
             /usr/local/bin/docker-compose build &&
             /usr/local/bin/docker-compose up -d
           "
