Ajout d'une ligne pour afficher la version dans le workflow de déploiement, facilitant ainsi le suivi des versions lors du déploiement.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
             set -e
             cd /volume1/docker/serial-viewer &&
             version=\$(git log -1 --date=short --format='%cd' 2>/dev/null || date +%F) &&
+            echo "Version: \$version" &&
             echo \$version > public/version.txt &&
             git config --global --add safe.directory /volume1/docker/serial-viewer &&
             git fetch origin &&
